# kitchen-companion

./: .gitignore  Cargo.toml  cfg.toml.example  sdkconfig.defaults
assets/face/girl/: idle_0.raw  idle_1.raw  idle_2.raw  listen_0.raw  listen_1.raw  listen_2.raw  speak_0.raw  speak_1.raw  speak_2.raw  think_0.raw  think_1.raw  think_2.raw
assets/face/robo/: idle_0.raw  idle_1.raw  idle_2.raw  listen_0.raw  listen_1.raw  listen_2.raw  speak_0.raw  speak_1.raw  speak_2.raw  think_0.raw  think_1.raw  think_2.raw
cloud/: wrangler.toml
cloud/src/: index.js
docs/: README.md  decisions.md  face-sprites.md  manual.md  setup.md  troubleshooting.md
docs/worklog/: 2026-07-15-environment-setup.md  2026-07-19-hello-world-git-lcd.md  2026-07-20-touch-wifi.md  2026-07-20b-microphone-speaker.md  2026-07-20c-wav-upload.md  2026-07-20d-cloud-relay.md  2026-07-20e-voice-loop-complete.md  2026-07-20f-ui-modes-history.md  2026-07-20g-speedup-characters.md  2026-07-21-microphone.md
src/: main.rs
tools/: face_convert.py  wav_receiver.py
