[package]
name = "kitchen-companion"
version = "0.1.0"
authors = ["Mutsumix <mkajihara.dev@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "kitchen-companion"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
# 注: Xtensa Rust 1.95.0.0 では "z" がLLVM ICE+ミスコンパイルを起こした。
# 1.97.0.0 への更新で解消を確認してテンプレート既定の "z" に戻した(troubleshooting.md参照)
opt-level = "z"
[patch.crates-io]
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git" }

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"] }
esp-idf-hal = "=0.46.2"
embedded-graphics = "=0.8.1"
mipidsi = "=0.9.0"
toml-cfg = "=0.2.0"

[build-dependencies]
embuild = "0.33"
